// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleLoader4 Loader should render image avatar properly 1`] = `
<div>
  <div
    class="sc-gsTCUz jVwPke"
  >
    <div
      class="sc-bdfBwQ bfScpV"
    />
  </div>
</div>
`;

exports[`CircleLoader4 Loader should render with all the props given 1`] = `
<div>
  <div
    class="sc-gsTCUz itwfOQ"
  >
    <div
      class="sc-bdfBwQ cBcIOo"
    />
  </div>
</div>
`;

exports[`CircleLoader4 Loader should render with default theme 1`] = `
<div>
  <div
    class="sc-gsTCUz FEXmB"
  >
    <div
      class="sc-bdfBwQ bfScpV"
    />
  </div>
</div>
`;
